--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>四川大学地图</title>
 
 	<!--引用百度地图API-->
-	<script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=YSCzbX9BEyTj3AeHlzrQx3vBCTI7tNKd"></script>
+	<script type="text/javascript" src="js/BMap.js"></script><!--http://api.map.baidu.com/api?v=2.0&ak=YSCzbX9BEyTj3AeHlzrQx3vBCTI7tNKd-->
 	<script type="text/javascript" src="https://api.map.baidu.com/library/AreaRestriction/1.2/src/AreaRestriction_min.js"></script>
 	<script type="text/javascript" src="https://api.map.baidu.com/library/LuShu/1.2/src/LuShu_min.js"></script>
 
