--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 	<script language="javascript" src="js/point.js"></script>
 	<script language="javascript" src="js/constant.js"></script>
 	<script language="javascript" src="js/functions.js"></script>
-	<script src="http://libs.baidu.com/jquery/1.9.0/jquery.js"></script>
+	<!--<script src="http://libs.baidu.com/jquery/1.9.0/jquery.js"></script>-->
+	<script language="javascript" src="js/my_jquery.js"></script>
 
 	<!--Checkbox样式-->
 	<link rel="stylesheet" href="css/normalize.css">
