--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
 		<span><h4>历史记录</h4></span>
 		<select name='make' id="history" onchange="setPolyline()">
 		</select>
-		<br><br>
 		<input name="清除历史记录" class="button white medium" type="button" id="clearHistory" value="清除历史记录" onclick="clearHistory()">
 		
 		<hr style=" height:2px;border:none;border-top:2px dotted #185598;" />
@@ -69,7 +68,7 @@
 	
 	<div id="routePlan">
 		<span><h4>路径规划</h4></span>
-		<input type="text" readonly="" id="routePlanText" style="display:inline-block;border:#7F9DB9 solid 1px;color:#555;width:200px;height:50px;line-height:30px;font-size:14px;font-weight:700" wrap="virtual" word-wrap:break-word; 
+		<input type="text" id="routePlanText" style="display:inline-block;border:#7F9DB9 solid 1px;color:#555;width:300px;height:50px;line-height:30px;font-size:14px;font-weight:700" wrap="virtual" word-wrap:break-word; 
     word-break:break-all;>
 		<hr style=" height:2px;border:none;border-top:2px dotted #185598;" />
 	</div>
@@ -112,12 +111,12 @@
 	var routeplan = document.getElementById("routePlan");
 	routeplan.style.position = "absolute";
 	routeplan.style.left = "830px";
-	routeplan.style.top = "440px";
+	routeplan.style.top = "400px";
 	
 	var lushu = document.getElementById("lushu");
 	lushu.style.position = "absolute";
 	lushu.style.left = "830px";
-	lushu.style.top = "590px";
+	lushu.style.top = "510px";
 
 	//变量：
 	var startpoint = new Array(),
